# horror

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
assets/: credits.md
assets/models/: house.glb  world.glb
assets/shaders/: blur.wgsl  vhs.wgsl
src/: debug.rs  game.rs  main.rs  menu.rs  splash.rs
src/game/: blur.rs  debug3d.rs  g2d.rs  g3d.rs  pause.rs  pp.rs  vhs.rs
