[package]
name = "horror"
version = "0.1.10"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[features]
default = [ "shaders" ]
debug = []
shaders = []

[dependencies]
bevy = { version = "0.14", features=["jpeg"] }
bevy-inspector-egui = "0.25.0"
rand = "0.8.5"
bevy_rapier3d = "0.27.0"
leafwing-input-manager = "0.15.0"
bevy_asset_loader = "0.21"
bevy_quickmenu = { git = "https://github.com/terhechte/bevy_quickmenu" }
