[package]
name = "horror"
version = "0.1.10"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["shaders"]
debug = []
shaders = []

[dependencies]
bevy = { version = "0.14", features = ["jpeg"] }
bevy-inspector-egui = "0.25.2"
rand = "0.8.5"
bevy_rapier3d = "0.27.0"
leafwing-input-manager = { version = "0.15.0", features = ["egui"] }
bevy_asset_loader = "0.21"
bevy_egui = "0.28.0"
